log/build_2021-12-08_19-35-40/py_chester_pkg/stderr.log
  File "/home/ubuntu/ros2_ws/install/py_chester_pkg/lib/python3.8/site-packages/py_chester_pkg/example_node.py", line 4
    from rclpy.None import None
               ^
SyntaxError: invalid syntax

